fix: filtrado de productos por sedes